--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -7,17 +7,17 @@ pre-commit:
   commands:
     biome:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+      stage_fixed: true
       run: |-
         npx biome check \
           --write \
           --unsafe \
           --no-errors-on-unmatched \
           --files-ignore-unknown=true \
-          {staged_files} \
-        && git update-index --again
+          {staged_files}
 
     sort-package-json:
       glob: package.json
+      stage_fixed: true
       run: |-
-        npx sort-package-json \
-        && git update-index --again
+        npx sort-package-json
