--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "wxt-template",
-	"version": "0.0.0",
+	"name": "backlog-arena",
+	"version": "1.0.0",
 	"private": true,
 	"type": "module",
 	"scripts": {
@@ -9,28 +9,15 @@
 		"postinstall": "lefthook install && wxt prepare"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"@commitlint/cli": "^19.8.0",
-		"@commitlint/config-conventional": "^19.8.0",
-		"@semantic-release/changelog": "^6.0.3",
-		"@semantic-release/exec": "^7.0.3",
-		"@wxt-dev/auto-icons": "^1.0.2",
-		"@wxt-dev/i18n": "^0.2.3",
-		"lefthook": "^1.11.3",
-		"semantic-release": "^24.2.3",
-		"sort-package-json": "^3.0.0",
-		"wxt": "^0.19.29"
+		"@biomejs/biome": "^2.2.2",
+		"@commitlint/cli": "^19.8.1",
+		"@commitlint/config-conventional": "^19.8.1",
+		"@wxt-dev/auto-icons": "^1.1.0",
+		"@wxt-dev/i18n": "^0.2.4",
+		"lefthook": "^1.12.3",
+		"semantic-release": "^24.2.7",
+		"sort-package-json": "^3.4.0",
+		"wxt": "^0.20.8"
 	},
-	"packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b",
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"@biomejs/biome",
-			"lefthook",
-			"sharp"
-		],
-		"ignoredBuiltDependencies": [
-			"@biomejs/biome",
-			"lefthook"
-		]
-	}
+	"packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
