--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
-	"extends": ["./.wxt/tsconfig.json", "@tsconfig/vite-react"]
+	"extends": ["./.wxt/tsconfig.json", "@tsconfig/vite-react"],
+	"compilerOptions": {
+		"types": ["vite/client"]
+	},
+	"include": [".storybook", "src"]
 }
