--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"storybook": "storybook dev -p 6006"
 	},
 	"dependencies": {
+		"@tabler/icons-react": "^3.34.1",
 		"@tanstack/history": "^1.131.2",
 		"@tanstack/react-router": "^1.131.35",
 		"@tanstack/react-router-devtools": "^1.131.35",
@@ -30,7 +31,6 @@
 		"@storybook/react": "^9.1.5",
 		"@storybook/react-vite": "^9.1.5",
 		"@tailwindcss/vite": "^4.1.13",
-		"@takuma-ru/auto-story-generator": "^0.4.0",
 		"@tanstack/router-plugin": "^1.131.35",
 		"@tsconfig/vite-react": "^7.0.0",
 		"@types/react": "^19.1.12",
@@ -46,6 +46,7 @@
 		"storybook": "^9.1.5",
 		"tailwindcss": "^4.1.13",
 		"vite": "^7.1.4",
+		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.2.4",
 		"wxt": "^0.20.8"
 	},
