--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 		"storybook": "storybook dev -p 6006"
 	},
 	"dependencies": {
+		"@fontsource/ibm-plex-sans-jp": "^5.2.6",
 		"@tabler/icons-react": "^3.34.1",
 		"@tanstack/history": "^1.131.2",
 		"@tanstack/react-router": "^1.131.35",
 		"@tanstack/react-router-devtools": "^1.131.35",
+		"clsx": "^2.1.1",
 		"react": "^19.1.1",
 		"react-aria-components": "^1.12.1",
 		"react-dom": "^19.1.1",
