--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@tanstack/history": "^1.131.2",
 		"@tanstack/react-router": "^1.131.35",
 		"@tanstack/react-router-devtools": "^1.131.35",
+		"backlog-js": "^0.13.7",
 		"clsx": "^2.1.1",
 		"react": "^19.1.1",
 		"react-aria-components": "^1.12.1",
@@ -47,6 +48,7 @@
 		"sort-package-json": "^3.4.0",
 		"storybook": "^9.1.5",
 		"tailwindcss": "^4.1.13",
+		"tailwindcss-animate": "^1.0.7",
 		"vite": "^7.1.4",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.2.4",
