--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": ["./.wxt/tsconfig.json", "@tsconfig/vite-react"],
 	"compilerOptions": {
-		"types": ["vite/client"]
+		"types": ["vite/client", "node"]
 	},
 	"include": [".storybook", "src"]
 }
