--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@wxt-dev/auto-icons": "^1.1.0",
 		"@wxt-dev/i18n": "^0.2.4",
 		"lefthook": "^1.12.3",
+		"openapi-typescript": "^7.9.1",
 		"playwright": "^1.55.0",
 		"semantic-release": "^24.2.7",
 		"sort-package-json": "^3.4.0",
@@ -55,7 +56,8 @@
 		"vite": "^7.1.4",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.2.4",
-		"wxt": "^0.20.8"
+		"wxt": "^0.20.8",
+		"yaml": "^2.8.1"
 	},
 	"packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
