--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
 		"@fontsource/ibm-plex-sans-jp": "^5.2.6",
 		"@tabler/icons-react": "^3.34.1",
 		"@tanstack/history": "^1.131.2",
+		"@tanstack/react-form": "^1.19.5",
+		"@tanstack/react-query": "^5.87.4",
 		"@tanstack/react-router": "^1.131.35",
 		"@tanstack/react-router-devtools": "^1.131.35",
 		"backlog-js": "^0.13.7",
 		"clsx": "^2.1.1",
+		"openapi-fetch": "^0.14.0",
+		"openapi-react-query": "^0.5.0",
 		"react": "^19.1.1",
 		"react-aria-components": "^1.12.1",
 		"react-dom": "^19.1.1",
