--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react": "^19.1.1",
 		"react-aria-components": "^1.12.1",
 		"react-dom": "^19.1.1",
+		"react-error-boundary": "^6.0.0",
 		"tailwindcss-react-aria-components": "^2.0.1",
 		"zod": "^4.1.8"
 	},
