feat: improve ux

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@tanstack/react-router-devtools": "^1.131.35",
 		"backlog-js": "^0.13.7",
 		"clsx": "^2.1.1",
+		"emoji-js": "^3.8.1",
 		"openapi-fetch": "^0.14.0",
 		"openapi-react-query": "^0.5.0",
 		"react": "^19.1.1",
@@ -43,6 +44,7 @@
 		"@tailwindcss/vite": "^4.1.13",
 		"@tanstack/router-plugin": "^1.131.35",
 		"@tsconfig/vite-react": "^7.0.0",
+		"@types/emoji-js": "^3.5.2",
 		"@types/node": "^24.3.3",
 		"@types/react": "^19.1.12",
 		"@types/react-dom": "^19.1.9",
