--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@tanstack/history": "^1.131.2",
 		"@tanstack/react-form": "^1.19.5",
 		"@tanstack/react-query": "^5.84.2",
+		"@tanstack/react-query-devtools": "^5.87.4",
 		"@tanstack/react-router": "^1.131.35",
 		"@tanstack/react-router-devtools": "^1.131.35",
 		"backlog-js": "^0.13.7",
