feat: mention input

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"react-aria-components": "^1.12.1",
 		"react-dom": "^19.1.1",
 		"react-error-boundary": "^6.0.0",
+		"react-hot-toast": "^2.6.0",
+		"react-mentions": "^4.4.10",
 		"react-textarea-autosize": "^8.5.9",
 		"react-use": "^17.6.0",
 		"tailwindcss-react-aria-components": "^2.0.1",
@@ -50,6 +52,7 @@
 		"@types/node": "^24.3.3",
 		"@types/react": "^19.1.12",
 		"@types/react-dom": "^19.1.9",
+		"@types/react-mentions": "^4.4.1",
 		"@vitest/browser": "^3.2.4",
 		"@vitest/coverage-v8": "^3.2.4",
 		"@wxt-dev/auto-icons": "^1.1.0",
